wip(sub-batches) Fix scrollbar appearing when table is empty

--- a/src/app/trip/batch/sub/sub-batches.table.scss
+++ b/src/app/trip/batch/sub/sub-batches.table.scss
@@ -41,7 +41,6 @@
 }
 
 .table-container {
-  --table-toolbar-height: 0px;
   height: calc(100% - var(--table-container-offset, 0px) - var(--table-toolbar-height));
   min-width: 100%;
   overflow: auto;
